<resources>
    <string name="app_name">Landmark Remark</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Landmark Remark</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="username_label">Username: </string>
    <string name="register_warning_message">Tài khoản chưa được đăng ký. Bạn có muốn đăng ký không?</string>
    <string name="deny">Từ chối</string>
    <string name="agree">Đồng ý</string>
    <string name="search">Search</string>
    <string name="create_note">Tạo ghi chú</string>
    <string name="save_note">Lưu ghi chú</string>
    <string name="address_note_history">Lịch sử ghi chú</string>
    <string name="address_label">"Địa chỉ: "</string>
    <string name="cancel">Hủy</string>
    <string name="note_label">Ghi chú: </string>
    <string name="note_hint">Vui lòng nhập ghi chú</string>
    <string name="logout">Đăng xuất</string>
    <string name="search_hint">Tìm kiếm…</string>
    <string name="get_location_fail">Lấy vị trí thất bại</string>
    <string name="please_allow_permission_location">Hãy cho phép truy cập vị trí</string>
    <string name="close">Đóng</string>
    <string name="edit_note">Chỉnh sửa ghi chú</string>
    <string name="detail_note">Chi tiết ghi chú</string>
    <string name="delete_note">Xóa ghi chú</string>
    <string name="note_input_empty">Vui lòng nhập ghi chú</string>
    <string name="confirm">Xác nhận</string>
    <string name="delete_confirm_message">Bạn có chắc chắn muốn xóa note này không?</string>
</resources>